[package]
name = "chipper"
version = "0.1.0"
authors = ["ArjunNair <arjunair@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
egui_sdl = {version = "0.1.5", package = "egui_sdl2_gl"}
sdl2 = "0.34.3"
rand = "0.7.3"
egui = "0.6.0"

[dependencies.gl]
git = "https://github.com/bjz/gl-rs"